--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@blocknote/core": "^0.13.5",
     "@blocknote/mantine": "^0.13.5",
     "@blocknote/react": "^0.13.5",
+    "@defensestation/blocknote-code": "^1.0.4",
     "dompurify": "^3.1.5",
     "marked": "^12.0.2",
     "next": "14.2.3",
