--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for backend-note-formatting on 2024-10-12T21:04:31-07:00
+# fly.toml app configuration file generated for backend-broken-paper-7275 on 2024-10-12T21:36:02-07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'backend-note-formatting'
+app = 'backend-broken-paper-7275'
 primary_region = 'sjc'
 
 [build]
